# nanoRenderer

./: .gitignore  cleanup.sh  profile.sh  rebuild.sh  setup.sh
nanoRenderer/: meson.build
nanoRenderer/include/: geometry.h  line.h  mesh.h  model.h  tgaimage.h  triangle.h  wireframe.h
nanoRenderer/src/: main.cpp
nanoRenderer/src/line/: line.cpp  meson.build
nanoRenderer/src/mesh/: mesh.cpp  meson.build
nanoRenderer/src/model/: meson.build  model.cpp
nanoRenderer/src/tgaimage/: meson.build  tgaimage.cpp
nanoRenderer/src/triangle/: meson.build  triangle.cpp
nanoRenderer/src/wireframe/: meson.build  wireframe.cpp
